[gd_scene load_steps=5 format=3 uid="uid://ch2mnoejygdef"]

[ext_resource type="Script" uid="uid://bkq8kixvxiyqr" path="res://script/respawn_bar.gd" id="1_i3s3a"]

[sub_resource type="LabelSettings" id="LabelSettings_etbbn"]
outline_size = 4
outline_color = Color(0, 0, 0, 0.9882353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3s3a"]
bg_color = Color(0, 0.72156864, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_daq3f"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="RespawnBar" type="Control"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_i3s3a")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 4.0
offset_right = 200.0
offset_bottom = 27.0
text = "aaa"
label_settings = SubResource("LabelSettings_etbbn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 15)
layout_mode = 0
offset_top = 31.0
offset_right = 200.0
offset_bottom = 46.0
theme_override_styles/fill = SubResource("StyleBoxFlat_i3s3a")
max_value = 60.0
show_percentage = false

[node name="TimeLabel" type="Label" parent="ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "123"
label_settings = SubResource("LabelSettings_daq3f")
horizontal_alignment = 1
vertical_alignment = 1
